# The-Wolf-Project

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  config.lua.dist  docker-compose.yml  missing_monsters.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-ubuntu.yml  build-vcpkg.yml  build-windows.yml  codeql.yml  docker-image.yml  release.yml
cmake/: FindCXX11.cmake  FindLua.cmake  FindLuaJIT.cmake  FindMySQL.cmake  cotire.cmake
data/_backup_xml/: actions.xml
data/actions/: actions.xml
data/globalevents/: globalevents.xml
data/items/: items.otb  items.xml
data/migrations/: 26.lua
data/monster/: monsters.xml
data/movements/: movements.xml
data/scripts/: example_action.lua  example_creatureevent.lua  example_globalevent.lua  example_moveevent.lua  example_talkaction.lua
data/talkactions/: talkactions.xml
data/world/: world-house.xml  world-monster.xml  world-npc.xml  world-spawn.xml
docs/: Compiling.md  Configuration.md  Database-Setup.md  Script-Interface.md
src/: CMakeLists.txt  definitions.h
src/core/: const.h  definitions.h  enums.h  game.cpp  otpch.h  otserv.cpp  scriptmanager.cpp  scriptmanager.h  signals.cpp
src/creatures/: monsters.cpp  monsters.h  npc.cpp  npc.h
src/io/: database.cpp  databasemanager.cpp  iologindata.cpp  iomap.cpp  iomapserialize.cpp
src/items/: items.cpp  items.h
src/lua/: actions.cpp  actions.h  baseevents.cpp  baseevents.h  creatureevent.cpp  creatureevent.h  globalevent.cpp  globalevent.h  luascript.cpp  luascript.h  (+6 more)
tools/: add_monster_attacks.py  convert_npc_to_inline.py  convert_npcs_to_lua.py  convert_xml_monsters_to_lua.py  convert_xml_npc_to_lua.py
(+1562 files in other folders)
